:bug: fix itemstack size issue